comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de html 5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam repudiandae eum iste voluptates cupiditate necessitatibus vero fuga, quia quaerat! Maiores numquam ea rem consectetur dolore cum repellat ipsa id fugit?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum facere quam, reprehenderit harum nulla animi ipsa sunt, id laudantium neque alias quis provident optio. Omnis impedit rerum laboriosam reiciendis maiores?</p>
         </article>
 
 
